test/zinc_source/compile_errors/iterations/05_tuple_index_nonliteral.zn
// expected-error: tuple index must be an integer literal

fn main() {
    item = (1, 2)
    index = 1
    bad = item[index]
}
